--- a/package.json
+++ b/package.json
@@ -5,16 +5,29 @@
   "license": "",
   "dependencies": {
     "@remix-run/react": "^1.2.1",
+    "@remix-run/serve": "^1.2.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.2",
+    "autoprefixer": "^10.4.2",
+    "cross-env": "^7.0.3",
+    "husky": "^7.0.4",
+    "pm2": "^5.2.0",
+    "postcss": "^8.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.2.1",
-    "@remix-run/serve": "^1.2.1",
-    "cross-env": "^7.0.3"
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.2.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "eslint": "^8.9.0",
+    "postcss-cli": "^9.1.0",
+    "postcss-import": "^14.0.2",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.7",
     "typescript": "^4.1.2"
   },
   "engines": {
@@ -23,9 +36,16 @@
   "sideEffects": false,
   "scripts": {
     "postinstall": "remix setup node",
-    "build": "cross-env NODE_ENV=production remix build",
-    "dev": "cross-env NODE_ENV=development remix dev",
+    "clean": "rimraf ./node_modules/.cache ./server/dist ./build ./public/build \"./app/styles/**/*.css\"",
+    "prebuild": "npm run clean && echo All clean ✨",
+    "build:css": "postcss styles/**/*.css --base styles --dir app/styles",
+    "build": "yarn build:css && remix build",
+    "dev": "pm2-dev ./other/pm2.config.js",
+    "dev:scss": "node-sass -w ./styles -o ./app/styles",
     "deploy": "fly deploy --remote-only",
-    "start": "cross-env NODE_ENV=production remix-serve build"
+    "start": "remix-serve build",
+    "prepare": "husky install",
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|gql|graphql|mdx|vue)\"",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/.eslintcache --ext js,jsx,ts,tsx ."
   }
 }
