--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
+    "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "husky": "^7.0.4",
     "pm2": "^5.2.0",
